[package]
name = "mitsubachi"
version = "0.0.1"
edition = "2021"

[dependencies]
sha2 = "0.10"           # MIT or Apache
base16ct = "0.1.1"      # MIT or Apache
rusqlite = "0.28.0"     # MIT
clap = { version = "4.5.37", features = ["derive"] }    # MIT
log = "0.4.27"
env_logger = "0.11.8"

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
